--- a/yueting/src/main/res/yueting/common/layout/activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_play.xml
@@ -24,7 +24,7 @@
             android:text="播放中"/>
     </FrameLayout>
 
-    <com.aqrairsigns.aqrleilib.view.VisualizerView
+    <com.aqrairsigns.aqrleilib.ui.view.VisualizerView
         android:id="@+id/vv_play"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center">
 
-            <com.aqrairsigns.aqrleilib.view.RoundBar
+            <com.aqrairsigns.aqrleilib.ui.view.RoundBar
                 android:id="@+id/rb_progress_play"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
