--- a/yueting/src/main/res/yueting/common/layout/layout_yueting_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/layout_yueting_play.xml
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <com.aqrairsigns.aqrleilib.view.RoundBar
+        <com.aqrairsigns.aqrleilib.ui.view.RoundBar
             android:id="@+id/rb_progress_play"
             android:layout_width="40dp"
             android:layout_height="40dp"
