--- a/yueting/src/main/res/yueting/home/layout/yueting_fragment_home.xml
+++ b/yueting/src/main/res/yueting/home/layout/yueting_fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:aqrlib="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <com.aqrairsigns.aqrleilib.view.AlphaListView
+    <com.aqrairsigns.aqrleilib.ui.view.AlphaListView
         android:id="@+id/lv_fragment_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
