--- a/yueting/src/main/res/yueting/music/layout/yueting_fragment_music.xml
+++ b/yueting/src/main/res/yueting/music/layout/yueting_fragment_music.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <com.aqrairsigns.aqrleilib.view.AlphaExpandListView
+    <com.aqrairsigns.aqrleilib.ui.view.AlphaExpandListView
         android:id="@+id/elv_fragment_music"
         android:overScrollMode="never"
         android:scrollbars="none"
