--- a/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
+++ b/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
@@ -23,6 +23,7 @@
         android:id="@+id/iv_pdf_read"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="matrix"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
