--- a/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
+++ b/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -23,7 +24,6 @@
         android:id="@+id/iv_pdf_read"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="matrix"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
