--- a/yueting/src/main/res/drawable/anim_drawable_test.xml
+++ b/yueting/src/main/res/drawable/anim_drawable_test.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 oneshot: false 无限循环;true 仅一次
 -->
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
