--- a/yueting/src/main/res/yueting/common/layout/activity_file.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_file.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,12 +14,11 @@
         <ImageView
             android:id="@+id/iv_back"
             style="@style/TitleBarImageViewStyle"
-            android:onClick="onClick"
-            />
+            android:onClick="onClick" />
 
         <TextView
             style="@style/TitleBarTextViewStyle"
-            android:text="我的文件"/>
+            android:text="我的文件" />
 
         <TextView
             android:id="@+id/tv_add_file"
@@ -28,15 +26,15 @@
             android:layout_height="match_parent"
             android:layout_gravity="right|center_vertical"
             android:gravity="center"
+            android:onClick="onClick"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:onClick="onClick"
             android:text="+"
             android:textSize="30dp"
-            android:textStyle="normal"/>
+            android:textStyle="normal" />
     </FrameLayout>
 
-    <View style="@style/DividerStyle"/>
+    <View style="@style/DividerStyle" />
 
     <TextView
         android:id="@+id/tv_file_parent"
@@ -45,12 +43,12 @@
         android:background="#ffffffee"
         android:ellipsize="end"
         android:gravity="center_vertical"
-        android:onClick="onClick"
         android:maxLines="1"
+        android:onClick="onClick"
         android:textSize="12dp"
-        tools:text="/dev"/>
+        tools:text="/dev" />
 
-    <View style="@style/DividerStyle"/>
+    <View style="@style/DividerStyle" />
 
     <ListView
         android:id="@+id/lv_file"
