--- a/yueting/src/main/res/yueting/common/layout/listitem_read.xml
+++ b/yueting/src/main/res/yueting/common/layout/listitem_read.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/ll_read_item"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:id="@+id/ll_read_item"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_book_name"
@@ -11,9 +11,9 @@
         android:layout_height="50dp"
         android:drawableLeft="@mipmap/ic_launcher"
         android:drawablePadding="15dp"
-        android:gravity="center_vertical"
-        android:textSize="20dp"
-        android:maxLines="1"
         android:ellipsize="end"
-        android:text="这是一个书的名字"/>
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:text="这是一个书的名字"
+        android:textSize="20dp" />
 </LinearLayout>
