--- a/yueting/src/main/res/yueting/read/layout/catelog_bookmark_item.xml
+++ b/yueting/src/main/res/yueting/read/layout/catelog_bookmark_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_catalog_name"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:ellipsize="end"
+        android:gravity="center_vertical"
+        android:lines="3"
         android:paddingLeft="10dp"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:gravity="center_vertical"
-        android:lines="3"
-        android:ellipsize="end"
         tools:text="第100章\n你好娘爱好爱你好娘" />
 
     <View
