--- a/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
+++ b/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_gravity="center">
 
     <TextView
         android:id="@+id/tv_pdf_top"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="顶部功能区"
-        android:textColor="#FFFFFFFF"
         android:background="#FF000000"
         android:gravity="center"
+        android:text="顶部功能区"
+        android:textColor="#FFFFFFFF"
         android:visibility="gone"
-        tools:visibility="visible"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/iv_pdf_read"
@@ -33,14 +33,14 @@
         android:id="@+id/tv_pdf_bottom"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="底部功能区"
-        android:textColor="#FFFFFFFF"
         android:background="#FF000000"
         android:gravity="center"
+        android:text="底部功能区"
+        android:textColor="#FFFFFFFF"
         android:visibility="gone"
-        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:visibility="visible" />
 
 </android.support.constraint.ConstraintLayout>
