--- a/yueting/src/main/res/yueting/read/layout/listheader_read_tab.xml
+++ b/yueting/src/main/res/yueting/read/layout/listheader_read_tab.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tl_tab_read"
         android:layout_width="match_parent"
@@ -14,5 +15,5 @@
         app:tabMode="fixed"
         app:tabSelectedTextColor="#4b67c6"
         app:tabTextAppearance="@style/TabTextAppearance"
-        app:tabTextColor="#a3d7d5"/>
+        app:tabTextColor="#a3d7d5" />
 </LinearLayout>
