--- a/yueting/src/main/res/yueting/read/layout/read_item_progress.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_item_progress.xml
@@ -2,31 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_bottom_read_seekBar"
-    android:background="#ff3a454d"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:orientation="horizontal"
     android:layout_gravity="bottom"
+    android:background="#ff3a454d"
     android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:visibility="gone"
     tools:visibility="visible">
 
     <android.support.v7.widget.AppCompatSeekBar
         android:id="@+id/sb_rate"
-        android:max="1000"
-        android:progress="0"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:max="1000"
+        android:progress="0" />
 
     <TextView
         android:id="@+id/tv_done_percent"
         android:layout_width="wrap_content"
-        android:text="00.0%"
-        android:padding="5dp"
+        android:layout_height="40dp"
         android:gravity="center"
-        android:textSize="20dp"
+        android:padding="5dp"
+        android:text="00.0%"
         android:textColor="#a6cc10"
-        android:layout_height="40dp" />
+        android:textSize="20dp" />
 
 </LinearLayout>
