--- a/yueting/src/main/res/yueting/read/layout/read_item_bottom.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_item_bottom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_bottom_read"
     android:layout_width="match_parent"
@@ -8,7 +9,10 @@
     android:background="#ff3a454d"
     android:orientation="horizontal"
     android:visibility="gone"
-    tools:visibility="invisible">
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    tools:visibility="visible">
 
     <TextView
         android:id="@+id/tv_catalog"
