--- a/yueting/src/main/res/yueting/read/layout/read_item_progress.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_item_progress.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_bottom_read_seekBar"
     android:layout_width="match_parent"
@@ -9,6 +10,9 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     tools:visibility="visible">
 
     <android.support.v7.widget.AppCompatSeekBar
