--- a/yueting/src/main/res/yueting/read/layout/read_item_setting.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_item_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_bottom_read_setting"
     android:layout_width="match_parent"
@@ -8,6 +9,9 @@
     android:background="#ff3a454d"
     android:orientation="vertical"
     android:visibility="invisible"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     tools:visibility="visible">
 
     <android.support.v7.widget.AppCompatSeekBar
@@ -20,6 +24,7 @@
         android:progress="70" />
 
     <LinearLayout
+        android:id="@+id/ll_bottom_font"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal">
