--- a/yueting/src/main/res/yueting/home/layout/yueting_fragment_home.xml
+++ b/yueting/src/main/res/yueting/home/layout/yueting_fragment_home.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/home_top_layout" />
+
     <com.aqrairsigns.aqrleilib.ui.view.AlphaListView
         android:id="@+id/lv_fragment_home"
         android:layout_width="match_parent"
