--- a/yueting/src/main/res/yueting/common/layout/activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_play.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="60px"
+        android:background="#ffffffff" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
