--- a/yueting/src/main/res/yueting/common/layout/activity_file.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_file.xml
@@ -6,6 +6,11 @@
     android:orientation="vertical"
     tools:context="com.aqrlei.graduation.yueting.ui.FileActivity">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="60px"
+        android:background="#ffffffff" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
