--- a/yueting/src/main/res/yueting/common/layout/activity_yueting.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_yueting.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/layout_yueting_header" />
-
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/fl_fragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ll_play_control" />
 
-        <FrameLayout
-            android:id="@+id/fl_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/ll_play_control" />
-
-        <include layout="@layout/layout_yueting_play" />
-    </RelativeLayout>
-
-
-</LinearLayout>
+    <include layout="@layout/layout_yueting_play" />
+</RelativeLayout>
