--- a/yueting/src/main/res/yueting/home/layout/home_top_layout.xml
+++ b/yueting/src/main/res/yueting/home/layout/home_top_layout.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPageGreen">
 
+    <include layout="@layout/layout_yueting_header" />
 
     <TextView
         android:id="@+id/tv_center_time"
