#update - Read - unDone

--- a/yueting/src/main/res/yueting/common/layout/activity_catalog.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_catalog.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="60px" />
+
     <RadioGroup
         android:id="@+id/rg_read_catalog"
         android:layout_width="match_parent"
