--- a/yueting/src/main/res/yueting/common/layout/activity_txt_read.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_txt_read.xml
@@ -7,8 +7,8 @@
 
     <include layout="@layout/read_item_top" />
 
-    <com.aqrairsigns.aqrleilib.ui.view.PageView
-        android:id="@+id/pv_read"
+    <com.aqrairsigns.aqrleilib.ui.view.BookPageView
+        android:id="@+id/bpv_read"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true" />
