--- a/yueting/src/main/res/yueting/common/layout/listitem_read.xml
+++ b/yueting/src/main/res/yueting/common/layout/listitem_read.xml
@@ -2,18 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_read_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="70dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_book_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:drawableLeft="@mipmap/ic_launcher"
-        android:drawablePadding="15dp"
-        android:ellipsize="end"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:maxLines="1"
-        android:text="这是一个书的名字"
-        android:textSize="20dp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_book_name"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/ic_launcher"
+            android:drawablePadding="15dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical|left"
+            android:maxLines="1"
+            android:text="这是一个书的名字"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/tv_book_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="bottom|right"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <View style="@style/DividerStyle" />
+
 </LinearLayout>
