#update - 导入第三方库，以备后用

--- a/yueting/src/main/res/values/colors.xml
+++ b/yueting/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorTabBackground">#e727e90e</color>
     <color name="colorPageGreen">#ffc7eece</color>
     <color name="colorPageYellow">#ffd6b28c</color>
-    <color name="colorPageWhite">#FFFFFFF0</color>
+    <color name="colorPageWhite">#FFF3F3F3</color>
+    <color name="colorPdfWhite">#FFF3F3F3</color>
     <color name="colorPageGrey">#FF666666</color>
 </resources>
