--- a/testapp/src/main/res/layout/activity_bookpage.xml
+++ b/testapp/src/main/res/layout/activity_bookpage.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.example.testapp.BookPageView
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
