--- a/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
+++ b/yueting/src/main/res/yueting/read/layout/fragment_pdf_renderer.xml
@@ -8,11 +8,10 @@
 
         />
 
-    <ImageView
-        android:id="@+id/iv_pdf_read"
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pv_pdf_read"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPageGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
