--- a/yueting/src/main/res/yueting/read/layout/read_item_setting.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_item_setting.xml
@@ -30,8 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:max="100"
-            android:progress="70" />
+            android:max="255" />
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/spPdfReadMode"
