#update - remove useless files and rename .xml files

--- a/yueting/src/main/res/yueting/home/layout/welcome_fragment_home.xml
+++ b/yueting/src/main/res/yueting/home/layout/welcome_fragment_home.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aqrlib="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.aqrairsigns.aqrleilib.ui.view.AlphaExpandListView
-        android:id="@+id/elv_fragment_music"
+    <include layout="@layout/welcome_include_home_top" />
+
+    <com.aqrairsigns.aqrleilib.ui.view.AlphaListView
+        android:id="@+id/lv_fragment_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        aqrlib:listMinHeight="90" />
 
 </LinearLayout>
