--- a/yueting/src/main/res/yueting/common/layout/music_include_yueting_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_include_yueting_play.xml
@@ -2,48 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:yueting="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_play_control"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:background="#9eec8484"
     android:orientation="vertical"
-    tools:context="com.aqrlei.graduation.yueting.ui.PlayActivity">
+    android:visibility="gone"
+    tools:visibility="visible">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="60px"
-        android:background="#ffffffff" />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FFFFFF">
-
-        <ImageView
-            android:id="@+id/iv_back"
-            style="@style/TitleBarImageViewStyle"
-            android:onClick="onClick" />
-
-        <TextView
-            style="@style/TitleBarTextViewStyle"
-            android:text="播放中" />
-    </FrameLayout>
-
-    <com.aqrairsigns.aqrleilib.ui.view.VisualizerView
-        android:id="@+id/vv_play"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#76a1d4"
-        yueting:offSetX="64"
-        yueting:scaleStyle="center"
-        yueting:scaleTime="3"
-        yueting:useMultiColor="true"
-
-        yueting:vRadius="100dp" />
-
-    <LinearLayout
-        android:id="@+id/ll_play_control"
+    <TextView
+        android:id="@+id/tv_up_win"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#9eec8484"
+        android:background="@color/colorPageWhite"
+        android:gravity="center"
+        android:text="^"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
@@ -83,7 +63,9 @@
             android:onClick="onClick"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="表" />
+            android:text="表"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_previous"
@@ -123,7 +105,6 @@
                 android:text="播" />
         </FrameLayout>
 
-
         <TextView
             android:id="@+id/tv_next"
             android:layout_width="30dp"
@@ -134,7 +115,9 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:text="下" />
+
     </LinearLayout>
 
 
 </LinearLayout>
+
