--- a/yueting/src/main/res/yueting/common/layout/welcome_include_yueting_top.xml
+++ b/yueting/src/main/res/yueting/common/layout/welcome_include_yueting_top.xml
@@ -4,8 +4,8 @@
     android:id="@+id/ll_tab_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="60px"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingTop="60px">
     <!--以后替换成图-->
     <TextView
         android:id="@+id/tv_setting"
