--- a/yueting/src/main/res/yueting/read/layout/read_fragment_pdf.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_fragment_pdf.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/read_item_top"
+    <include layout="@layout/read_include_read_top"
 
         />
 
@@ -17,11 +17,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include layout="@layout/read_item_bottom" />
+    <include layout="@layout/read_include_read_bottom" />
 
-    <include layout="@layout/read_item_progress" />
+    <include layout="@layout/read_include_read_progress" />
 
-    <include layout="@layout/read_item_setting" />
+    <include layout="@layout/read_include_read_setting" />
 
 
 </android.support.constraint.ConstraintLayout>
