--- a/yueting/src/main/res/yueting/common/layout/main_include_yueting_top.xml
+++ b/yueting/src/main/res/yueting/common/layout/main_include_yueting_top.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center_vertical"
         android:padding="12dp"
         android:text="设置"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
