--- a/yueting/src/main/res/yueting/common/layout/main_include_yue_ting_top.xml
+++ b/yueting/src/main/res/yueting/common/layout/main_include_yue_ting_top.xml
@@ -6,27 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="60px">
-    <!--以后替换成图-->
-    <TextView
-        android:id="@+id/tv_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:padding="12dp"
-        android:text="设置"
-        android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!--以后替换成图-->
-    <TextView
-        android:id="@+id/tv_file_local"
+    <ImageView
+        android:id="@+id/addFileIv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:onClick="onClick"
         android:padding="12dp"
-        android:text="本地"
+        android:background="@drawable/common_selector_add"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
