--- a/yueting/src/main/res/yueting/common/layout/music_notification_foreground.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_notification_foreground.xml
@@ -10,52 +10,61 @@
         android:layout_height="50dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher_round" />
-
-    <TextView
-        android:id="@+id/tv_music_info"
+        android:scaleType="centerCrop"
+        android:background="@drawable/music_selector_note" />
+    <LinearLayout
+        android:id="@+id/musicInfoLl"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        android:ellipsize="marquee"
-        android:gravity="center_vertical"
-        android:lineSpacingExtra="2dp"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:maxLines="2"
-        android:scrollHorizontally="true"
-        android:text="这是歌的名字"
-        android:textSize="18dp" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/musicInfoTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="这是歌的名字"
+            android:textColor="#1c4243"
+            android:textSize="18dp" />
+        <TextView
+            android:id="@+id/musicInfoDetailTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="这是歌的名字"
+            android:textSize="12dp" />
 
-    <TextView
-        android:id="@+id/tv_play_control"
+    </LinearLayout>
+
+
+
+    <ImageView
+        android:id="@+id/playControlIv"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="播" />
+        android:padding="5dp"
+        android:src="@drawable/music_selector_pause" />
 
-    <TextView
-        android:id="@+id/tv_next"
+    <ImageView
+        android:id="@+id/nextIv"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="下" />
+        android:padding="5dp"
+        android:src="@drawable/music_selector_next" />
 
-    <TextView
-        android:id="@+id/tv_finish"
+    <ImageView
+        android:id="@+id/closeIv"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="结" />
+        android:padding="5dp"
+        android:src="@drawable/common_selector_close" />
 </LinearLayout>
