--- a/yueting/src/main/res/yueting/common/layout/music_activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_activity_play.xml
@@ -18,7 +18,7 @@
         android:background="#FFFFFF">
 
         <ImageView
-            android:id="@+id/iv_back"
+            android:id="@+id/backIv"
             style="@style/TitleBarImageViewStyle"
             android:onClick="onClick" />
 
